# magic-the-gathering-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  magic-the-gathering.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  magic-the-gathering.rockspec  magic-the-gathering_sdk.lua  magic-the-gathering_types.lua
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  magicthegathering_sdk.py  magicthegathering_types.py  pyproject.toml
py/core/: context.py  control.py  response.py  spec.py
py/entity/: card_entity.py  set_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  debug_feature.py  log_feature.py  netsim_feature.py  proxy_feature.py  rbac_feature.py  retry_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_card_direct.py  test_card_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_set_direct.py  test_set_entity.py
py/utility/: clean.py  feature_init.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_response.py  make_result.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_body.py  prepare_method.py  prepare_params.py  transform_response.py
(+437 files in other folders)
